--- a/app/src/main/res/layout/activity_making_donation.xml
+++ b/app/src/main/res/layout/activity_making_donation.xml
@@ -16,6 +16,13 @@
         android:textColor="#283cb9"
         android:text="Thank you for considering a donation!" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_gravity="center_horizontal" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
